# lib/db/src/schema/users.ts
@@ -16,6 +16,7 @@ export const usersTable = pgTable("users", {
   privacy_show_profile: boolean("privacy_show_profile").notNull().default(true),
   privacy_show_memberships: boolean("privacy_show_memberships").notNull().default(true),
   privacy_allow_dms: boolean("privacy_allow_dms").notNull().default(true),
+  profile_photo: text("profile_photo").notNull().default(""),
   created_at: timestamp("created_at").notNull().defaultNow(),
   updated_at: timestamp("updated_at"),
 });
